Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111557

A left button click followed by a right button click triggers a doubleTabbed event

    XMLWordPrintable

Details

    • d3c181356 (dev), 1c7324436 (6.5)

    Description

      A left button click followed by a right button click triggers a doubleTabbed event.
      Usually only two clicks on the same button are treated as a doubleTabbed event.

       

      To reproduce, open the mapview example of Qt Location and press the left and right buttons of your mouse in short succession. The doubleTapped event will then trigger a change of the zoomlevel.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              matthias_rauter Matthias Rauter
              matthias_rauter Matthias Rauter
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes