Don't emit doubleTapped when the buttons are different

A left-click followed by right-click was interpreted as a double-click.
This is different from what I am used to and different
from what I expect. This patch changes the behavior such that only
clicks of the same button are interpreted as double click.

Fixes: QTBUG-111557
Change-Id: Id0d83ca66944497710d8f659ed5a6d1e4260a2d9
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit d3c181356399a6948906d36119a8e50e140090e7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>